--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family:'Open Sans', sans-serif;
 }
 
 h1 {
@@ -41,6 +42,22 @@ h3 {
     text-align: center;
     vertical-align: middle;
   }
+
+.links {
+    text-underline-offset: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    
+    
+}
+
+:hover.links {
+    text-decoration-color: blue !important;
+    text-decoration-thickness: 5px !important;
+    text-decoration: underline;
+    cursor: pointer;
+}
  
 
 #pokedex {
@@ -63,4 +80,22 @@ h3 {
     display: flex;
     object-fit: contain;
     margin: 50px;
+}
+
+.mainData {
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 50vh;
+    margin-top: -160px;
+    background-color: white;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+
+}
+
+#dataLinks {
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 50px;
 }
