--- a/style.css
+++ b/style.css
@@ -153,10 +153,17 @@ td {
     
 }
 
+.evoIMG {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 200px;
+}
+
 #evoIMG {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    min-height: 150px;
 }
+
 
